--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,6 +179,9 @@
 
 <main class="main">
   <div class="content">
+    <h1>Minha Lista de Compras</h1>
+     
+
     <div class="left-side">
       <svg
         xmlns="http://www.w3.org/2000/svg"
