--- a/src/app/lista/lista.component.css
+++ b/src/app/lista/lista.component.css
@@ -1,75 +1,76 @@
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #6a0dad, #b28df2); 
-    padding: 0;
+* {
+    box-sizing: border-box;
     margin: 0;
-    height: 100vh; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.container {
-    max-width: 600px; 
-    width: 100%; 
-    background: white;
-    border-radius: 8px;
+    padding: 0;
+  }
+  
+  body {
+    background: linear-gradient(to bottom right, #ffffff, #e6ccff);
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .container {
+    background: linear-gradient(to bottom right, #f3e6ff, #d9b3ff);
     padding: 20px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); 
-}
-
-h1 {
-    color: #6a0dad; 
-}
-
-.form-add {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    text-align: center;
+    width: 400px;
+  }
+  
+  h1 {
+    color: #4d004d;
     margin-bottom: 20px;
-    display: flex; 
-}
-
-input[type="text"] {
-    width: calc(100% - 100px); 
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  }
+  
+  .form-add {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .input-item {
+    padding: 8px;
+    flex: 1;
     margin-right: 10px;
-}
-
-button {
-    padding: 10px;
-    background-color: #6a0dad; 
-    color: white;
+    border: 2px solid #4d004d;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  button {
+    padding: 8px 16px;
+    background-color: #4d004d;
+    color: #ffffff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s; 
-}
-
-button:hover {
-    background-color: #4b0082; 
-}
-
-ul {
-    list-style: none;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #800080;
+  }
+  
+  ul {
+    list-style-type: none;
     padding: 0;
-}
-
-li {
+  }
+  
+  li {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-}
-
-
-.comprado {
-    text-decoration: line-through; 
-    color: lightgray; 
-}
-
-
-li input[type="checkbox"]:not(:checked) + span {
-    text-decoration: none; 
-    color: black; 
-}
+    align-items: center;
+    margin-bottom: 10px;
+    color: #4d004d;
+  }
+  
+  .comprado {
+    text-decoration: line-through;
+    color: #800080;
+  }
+  
